[package]
name = "shess"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"
publish = true
license-file = "LICENSE"
description = "we shessing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
full = ["terminal", "discord"]
terminal = []
discord = []

[dependencies]
glucose = "0.2.1"