[package]
name = "shess"
version = "0.1.11"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"
publish = true
license-file = "LICENSE"
description = "we shessing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
full = ["terminal", "discord"]
terminal = []
discord = []

[dependencies]
fructose = "0.3.3"
glucose = "0.2.2"